--- a/kindred_causes/main/templates/event_management.html
+++ b/kindred_causes/main/templates/event_management.html
@@ -40,17 +40,16 @@
     </fieldset>
 </div>
 
-
 <fieldset class="fieldset w-full">
-    <legend class="fieldset-legend">Date and Time</legend>
-    <input type="datetime-local" class="input w-full" required/>
+    {{form.date}}
 </fieldset>
 
 
 {% endblock form_content%}
 
 {% block form_buttons %}
-<a role="button" class="btn btn-primary w-full" type="submit">
+<button type="reset" onclick="history.back()" class="btn btn-soft btn-error">Cancel</button>
+<button type="submit" class="btn btn-soft btn-success">
     {% if view_type == 'update' %}
       Save Changes
    {% elif view_type == 'create' %}
