--- a/kindred_causes/main/static/css/input.css
+++ b/kindred_causes/main/static/css/input.css
@@ -143,7 +143,7 @@
     flex-grow: 1;
   }
   
-  .input, .select, .textarea {
+  .input, .select, .textarea, .fieldset {
     width: 100%;
   }
   
