--- a/kindred_causes/templates/form.html
+++ b/kindred_causes/templates/form.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <div class="flex grow justify-around items-center my-15">
-        <form class="accent bg-base-200 rounded-2xl h-fit flex flex-col space-y-10 p-10 min-w-md" 
+        <form class="accent bg-base-200 rounded-2xl h-fit flex flex-col space-y-10 py-5 px-10 min-w-md" 
             method="post" 
             action="{% block form_action %}{% endblock form_action %}"
         >   
