--- a/kindred_causes/templates/registration/login.html
+++ b/kindred_causes/templates/registration/login.html
@@ -27,8 +27,15 @@
 {% endblock form_buttons %}
 
 {% block form_messages%}
+<div class="flex flex-col justify-around items-center">
 <p>
     New to Kindred Causes?
     <a class="link text-primary-content link-primary type=" submit" href="{% url 'user_registration' %}"">Create an Account</a>
 </p>
+<p>
+    Trouble logging in?
+        <a class="link text-primary-content link-primary type=" submit" href="{% url 'user_registration' %}"">Reset Password</a>
+
+</p>
+</div>
 {% endblock form_messages%}
