--- a/kindred_causes/templates/navbar.html
+++ b/kindred_causes/templates/navbar.html
@@ -4,9 +4,11 @@
     </div>
     <div class="flex-none">
         <ul class="menu menu-horizontal px-1 gap-2">
+        {% if not user.is_authenticated %}
+        <li><a href="{% url 'user_registration' %}">Sign Up</a></li>
+        <li><a href="{% url 'login' %}">Login</a></li>
+        {% else %}
             <li><a href="{% url 'home' %}">Home</a></li>
-            <li><a href="{% url 'user_registration' %}">Sign Up</a></li>
-            <li><a href="{% url 'login' %}">Login</a></li>
             <li><a href="{% url 'event_browser' %}">Browse Events</a></li>
             <li><a href="{% url 'event_preview' %}">Preview Event</a></li>
             <li><a href="{% url 'volunteer_history' %}">Volunteer History</a></li>
@@ -41,6 +43,7 @@
                     </li>
                 </ul>
             </div>
+        {% endif %}
         </ul>
     </div>
 </div>
