--- a/kindred_causes/main/templates/profile_management.html
+++ b/kindred_causes/main/templates/profile_management.html
@@ -96,8 +96,19 @@
     <input type="text" name="zipcode" class="input w-full" placeholder="12345" placeholder="12345" pattern="\d{5,9}" minlength="5" maxlength="9" required/>
 </fieldset>
 
-<!-- Skills-->
+<!-- Phone -->
+<fieldset class="fieldset w-full">
+    <legend class="fieldset-legend ">Phone number</legend>
+    <input type="text" name="phone" class="input w-full" placeholder="(123)-456-7890" placeholder="(123)-456-7890" pattern="\d{5,9}" minlength="5" maxlength="9" required/>
+</fieldset>
 
+<!-- Email -->
+<fieldset class="fieldset w-full">
+    <legend class="fieldset-legend ">Email <Address></Address></legend>
+    <input type="text" name="email" class="input w-full" placeholder="abc@example.com" pattern="\d{5,9}" minlength="5" maxlength="9" required/>
+</fieldset>
+
+<!-- Skills-->
 <fieldset class="fieldset w-full">
     <legend class="fieldset-legend">Skills</legend>
     <details class="dropdown w-full">
