--- a/kindred_causes/main/templates/account.html
+++ b/kindred_causes/main/templates/account.html
@@ -78,7 +78,7 @@
                 <div class="collapse-title text-xl font-medium">Private Information</div>
                 <div class="collapse-content">
                     <p class="text-lg">Email: {{ email }}</p>
-                    <p class="text-lg">Address: {{ address }}</p>
+                    <p class="text-lg">Address 1: {{ address1 }}</p>
                     <p class="text-lg">Address 2: {{ address2 }}</p>
                     <p class="text-lg">Zip Code: {{ zip_code }}</p>
                     <p class="text-lg">Phone: {{ phone }}</p>
