--- a/kindred_causes/main/templates/event_browser.html
+++ b/kindred_causes/main/templates/event_browser.html
@@ -9,14 +9,29 @@
     <!-- head -->
     <thead>
       <tr>
-        <th>Event Name</th>
+        <th>
+          <a href="?sort={% if current_sort == 'name' %}-name{% else %}name{% endif %}">
+            Event Name
+            {% if current_sort == 'name' %}▲{% elif current_sort == '-name' %}▼{% endif %}
+          </a>
+        </th>
         <th>Description</th>
         <th>Location</th>
         <th>Skills Required</th>
-        <th>Date</th>
-        <th>Urgency Level</th>
+        <th>
+          <a href="?sort={% if current_sort == 'date' %}-date{% else %}date{% endif %}">
+            Date
+            {% if current_sort == 'date' %}▲{% elif current_sort == '-date' %}▼{% endif %}
+          </a>
+        </th>
+        <th>
+          <a href="?sort={% if current_sort == 'urgency' %}-urgency{% else %}urgency{% endif %}">
+            Urgency
+            {% if current_sort == 'urgency' %}▲{% elif current_sort == '-urgency' %}▼{% endif %}
+          </a>
+        </th>
         {% if user.is_staff %}
-        <th>Update Event</th>
+        <th></th>
         {% endif %}
 
       </tr>
@@ -25,10 +40,10 @@
       <!-- row 1 -->
       {% for event in events %}
         <tr class="hover:bg-base-300">
-          <th>{{event.name}}</th>
-          <th>{{event.description}}</th>
-          <th>{{event.location}}</th>
-          <th>
+          <td>{{event.name}}</td>
+          <td>{{event.description}}</td>
+          <td>{{event.location}}</td>
+          <td>
             <ul class="list-disc list-inside">
               {% for skill in event.required_skills.all %}
                 <li>{{ skill.name }}</li>
@@ -36,16 +51,16 @@
                 <li>None</li>
               {% endfor %}
             </ul>
-          </th>
-          <th>{{event.date}}</th>
-          <th>{{event.get_urgency_display}}</th>
+          </td>
+          <td>{{event.date}}</td>
+          <td>{{event.get_urgency_display}}</td>
           {% if user.is_staff %}
-            <th>
+            <td>
               <a role="button" class="btn btn-primary" type="submit"
                 href="{% url 'edit_event_management' event.pk %}">
                 Update Event
               </a>
-            </th> 
+            </td> 
           {% endif %}
         </tr>
       {% endfor %}
