--- a/kindred_causes/main/templates/event_management.html
+++ b/kindred_causes/main/templates/event_management.html
@@ -55,12 +55,12 @@
 {% endblock form_content%}
 
 {% block form_buttons %}
-<button type="reset" onclick="history.back()" class="btn btn-soft btn-error">Cancel</button>
+<a href="{% url 'event_browser' %}" class="btn btn-soft btn-success">Cancel</a>
 <button type="submit" class="btn btn-soft btn-success">
-    {% if view_type == 'update' %}
+    {% if view_type == 'update' %} 
       Save Changes
    {% elif view_type == 'create' %}
       Create Event
    {% endif %}
-</a>
+</button>
 {% endblock form_buttons %}
