Made home page event browser

--- a/kindred_causes/main/templates/event_browser.html
+++ b/kindred_causes/main/templates/event_browser.html
@@ -85,7 +85,7 @@
 
 
 {% if user.is_staff %}
-<a role="button" class="btn btn-primary" type="submit" href="{% url 'new_event_management' %}"> Create a Event</a>
+<a role="button" class="btn btn-primary" type="submit" href="{% url 'new_event_management' %}"> Create an Event</a>
 {% endif %}
 
 {% endblock table_content%}
