Fixed registration bugs

--- a/kindred_causes/main/templates/landing.html
+++ b/kindred_causes/main/templates/landing.html
@@ -12,7 +12,7 @@
           Welcome to Kindred Causes. This is a school project. Blah blah blah. Lorem ipsum dolor sit, dongus dingus solar schmidt.
         </p>
         <div class="flex w-full flex-col">
-          <a class="btn btn-lg btn-secondary" href="{% url 'user_registration' %}">Get Started</a>
+          <a class="btn btn-lg btn-secondary" href="{% url 'register' %}">Get Started</a>
           <div class="divider my-8">OR</div>
           <p>
             Already have an account?
