--- a/kindred_causes/templates/navbar.html
+++ b/kindred_causes/templates/navbar.html
@@ -5,7 +5,7 @@
     <div class="flex-none">
         <ul class="menu menu-horizontal px-1 gap-2">
         {% if not user.is_authenticated %}
-        <li><a href="{% url 'user_registration' %}">Sign Up</a></li>
+        <li><a href="{% url 'register' %}">Sign Up</a></li>
         <li><a href="{% url 'login' %}">Login</a></li>
         {% else %}
             {% comment %} <li><a href="{% url 'home' %}">Home</a></li> {% endcomment %}
