--- a/kindred_causes/main/templates/event_management.html
+++ b/kindred_causes/main/templates/event_management.html
@@ -6,6 +6,8 @@
     Edit Event
     {% elif view_type == 'create' %}
     Create Event
+    {% elif view_type == 'view' %}
+    View Event
     {% endif %}
 {% endblock form_title %}
 
@@ -32,7 +34,7 @@
 
 <div class="flex flex-row gap-2 w-full">
     
-    <fieldset class="fieldset w-full">
+    {% comment %} <fieldset class="fieldset w-full">
         <legend class="fieldset-legend">Skills</legend>
         <details class="dropdown w-full">
             <summary class="select">Select Skills</summary>
@@ -40,7 +42,7 @@
                 {{form.required_skills}}
             </ul>
         </details>
-    </fieldset>
+    </fieldset> {% endcomment %}
 
     <fieldset class="fieldset w-1/2">
         {{form.urgency}}
@@ -55,12 +57,16 @@
 {% endblock form_content%}
 
 {% block form_buttons %}
-<a href="{% url 'event_browser' %}" class="btn btn-soft btn-success">Cancel</a>
-<button type="submit" class="btn btn-soft btn-success">
-    {% if view_type == 'update' %} 
-      Save Changes
-   {% elif view_type == 'create' %}
-      Create Event
-   {% endif %}
-</button>
+    {% if view_type == 'view' %}
+        <a href="{% url 'event_browser' %}" class="btn btn-soft btn-success">Leave</a>
+    {% else %}
+        <a href="{% url 'event_browser' %}" class="btn btn-soft btn-success">Cancel</a>
+        <button type="submit" class="btn btn-soft btn-success">
+            {% if view_type == 'update' %} 
+                Save Changes
+            {% elif view_type == 'create' %}
+                Create Event
+            {% endif %}
+        </button>
+    {% endif %}
 {% endblock form_buttons %}
